--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "node start-dev.js",
     "build": "vite build",
     "preview": "vite preview",
     "start-with-qr": "node start-with-qr.js"
